# paper-reward-scan

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: settings.yaml
configs/prompts/: evaluate.yaml  extract.yaml
src/: compiler.py  evaluator.py  extractor.py  main.py  models.py  schemas.py  utils.py
