[project]
name = "paper-reward-scan"
version = "0.1.0"
description = "Build SFT datasets from UAV RL papers using LLM extractor-critic pipeline"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "rich>=13.0",
    "requests>=2.31.0",
    "transformers>=4.38.0",
    "torch>=2.1.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
google = ["google-genai>=2.0.0"]

[project.scripts]
prs = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
